css/responcive.css
@media (max-height: 500px) {
    .aboutus__left-text {
        line-height: 1.6;
    }
}

@media (max-height: 440px) {
    .aboutus__left-text {
        line-height: 1.5;
    }
}

@media (max-height: 410px) {
    .aboutus__left-text {
        line-height: 1.4;
    }
}

@media (max-height: 380px) {
    .aboutus__left-text {
        line-height: 1.3;
    }
}

@media (max-width: 1920px){
    .content__left-bottom{
        max-width: 408px;
    }
    .page__row {
        max-width: 1920px;
    }
    .section5__card {
        width: 100%;
    }
    .aboutus__right {
        width: 40%;
    }
}

@media (max-width:1870px){
    html {
        font-size: 90%;
    }
    .section__info-block1{
        margin-right: 2rem;
    }

    .header{
        padding: 0 80px;
    }
    .page__cell{
        max-width: 1435px;
    }
    .slider__item {
        width: 40.125rem;
        height: 33.875rem;
    }
    .content__right {
        width: 60rem;
    }
    .slick-initialized .slick-slide {
        height: 280px;
    }
}
@media screen and (max-width:1680px){
    html {
        font-size: 85%;
    }

    .page__cell{
        max-width: 1353px;
    }
   

}
@media screen and (max-width:1430px){
    html {
        font-size: 80%;
    }
}

@media (max-width: 1334px){
    .content__left-bottom{
        max-width: 348px;
    }
}

@media screen and (max-width:1280px){
    html {
        font-size: 75%;
    }
}

@media screen and (max-width: 1202px){
    .section5__card.vDesktop {
        height: 44rem;
    }
    .section5__card-item-img{
        height: 45rem;
    }
    .section5__card-item{
        width: 30rem;
    }
    .section5__card-item-img{
        height: 39rem;
    } 
    .section5__card-item{
        height: 40rem;
    }
    .section5__card-item-link {
        bottom: 2.5rem;
    }
}

@media screen and (max-width:1130px) {
    html {
        font-size: 60%;
    }
    .header {
        padding: 0 80px 0 0;
    }

    .content__left-bottom{
        max-width: 298px;
    }
    /*.slider__item {*/
    /*    min-width: initial !important;*/
    /*    margin: 0 20px 0 35px !important;*/
    /*}*/
    .hidden {
        width: 50%;
    }
    .span-heading {
        font-size: .9rem;
    }


    /***********************************/
    /*.tablet {
        display: flex;
        height: 500px;
        overflow: auto;
    }

    .section5__info {
        display: none;
    }
    .cell-tablet{
        padding-bottom: 5rem;
        width: 90%;
    }
    .section__info-block{
        width: 90%;
        margin: 1rem auto;
        display: flex;
        justify-content: space-around;
    }
    .block__img{
        position: relative;
        width: 23.5rem;
        height: 12.22rem;
        overflow: hidden;
    }
    .block__text{
        width: 49%;
    }
    .block__text-headline{
        font-size: 18px;
        color: #000;
        font-family: "Fira Sans";
        text-transform: uppercase;
        line-height: 1.2;
        text-align: left;
        font-weight: 400;
        letter-spacing: 0;
    }
    .block__text-text{
        font-size: 16px;
        color: #000;
        font-family: "Fira Sans";
        line-height: 1.2;
        text-align: left;
        font-weight: 400;
        letter-spacing: 0;
        margin-top: 1rem
    }
    .block1__right-link{
        margin-top: 25px;
    }*/
    .section5__card-item {
        width: 31rem;
    }
}
@media (max-width: 1020px) {
    .section5__card-item {
        width: 30rem;
    }
}

@media (max-width: 980px) {
    .section5__card-item {
        width: 28rem;
    }
}
/* ... */

